# nqrduck-spectrometer-simulator

./: CHANGELOG.md  README.md  pyproject.toml
src/nqrduck_spectrometer_simulator/: controller.py  model.py  view.py
